--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!--pic, quote & article column-->
 
   <div class="container">
-    <div class="quote">
+    <div id="learn-something">
       <img src="./resources/images/information-main.jpg">
       <h1>It doesn't hurt to keep practicing</h1>
       <p class="quote">&quot;gibberish&quot;</p>
@@ -68,7 +68,7 @@
 <!--COURSES-->
 
   <div class="container">
-    <div class="courses">
+    <div id="courses">
     <h1>Start Learning</h1>
       <div class="course-box">
         <img src="./resources/images/course-software.jpg">
@@ -109,5 +109,40 @@
     </div>
   </div>
 
+<!--Thesis Exhibit-->
+
+  <div class="container">
+    <div id="thesis">
+      <h1>Thesis exhibit</h1>
+      <video src="./resources/videos/thesis.mp4">Video Not Supported</video>
+      <h2>Reimagine Urban</h2>
+      <p>add gibberish and quotes</p>
+
+      <div class="column">
+        <div class="fisma">
+          <img src="./resources/images/thesis-fisma.jpg">
+          <h2>Fisma: Design and Prototype</h2>
+          <p>Designer showcase of new prototype product</p>
+        </div>
+        <div class="now-then">
+          <img src="./resources/images/thesis-now-and-then.jpg">
+          <h2>Now and Then</h2>
+          <p>Research study about New York</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!--footer-->
+
+  <footer class="container">
+    <div class="copyright">
+      <p>&copy;2016 Colmar Academy. All Rights Reserved</p>
+    </div>
+    <div class="footlinks">
+      <p><a href="#">Terms</a></p>
+      <p><a href="#">Privacy</a></p>
+    </div>
+  </footer>
 
 </html>
