minor html/started css 25%

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 </head>
 <body>
 
+<!--need to fix "" and &-->
+
+
 <!--HEADER-->
 
   <header class="container">
     <img src=./resources/images/ic-logo.svg>
-    <span>COLMAR ACEDMAY</span>
+    <span>COLMAR<!--color change-->ACEDMAY</span>
       <nav>
         <span>On Campus</span>
         <span>Online</span>
@@ -18,23 +21,23 @@
       </nav>
   </header>
 
-
 <!--MAIN BANNER-->
-
 
   <div class="container">
     <div class="main-banner">
       <img src="./resources/images/banner.jpg">
-      <h1>Learn Something New Everyday</h1>
-      <h3>Lorem imspum dolor sit amet, consectetur adipiscing elit.</h3>
-      <span class="start-button">Start Here</span>
+        <div class="banner-text">
+          <h1>Learn Something New Everyday</h1>
+          <h3>Lorem imspum dolor sit amet, consectetur adipiscing elit.</h3>
+          <span class="start-button">Start Here</span>
+        </div>
     </div>
   </div>
 
 <!--pic, quote & article column-->
 
   <div class="container">
-    <div id="learn-something">
+    <div class="learn-something">
       <img src="./resources/images/information-main.jpg">
       <h1>It doesn't hurt to keep practicing</h1>
       <p class="quote">&quot;gibberish&quot;</p>
@@ -68,7 +71,7 @@
 <!--COURSES-->
 
   <div class="container">
-    <div id="courses">
+    <div class="courses">
     <h1>Start Learning</h1>
       <div class="course-box">
         <img src="./resources/images/course-software.jpg">
@@ -110,6 +113,7 @@
   </div>
 
 <!--Thesis Exhibit-->
+<!--add video controls-->
 
   <div class="container">
     <div id="thesis">
@@ -140,8 +144,8 @@
       <p>&copy;2016 Colmar Academy. All Rights Reserved</p>
     </div>
     <div class="footlinks">
-      <p><a href="#">Terms</a></p>
-      <p><a href="#">Privacy</a></p>
+      <span>Terms</span>
+      <span>Privacy</span>
     </div>
   </footer>
 
